# WoL-Caster

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  LICENSE.txt  Makefile  README.md  WoL-Caster.spec  build_app.sh  gitignore  pyproject.toml  requirements.txt  setup.py  wol-caster.spec  wol_caster.py
.github/workflows/: build-release.yml
assets/: Wol-Caster.icns
github/workflows/: build-and-release.yml
